--- a/src/components/ui/primitives/GlitchProgress.module.css
+++ b/src/components/ui/primitives/GlitchProgress.module.css
@@ -122,7 +122,7 @@
     hsl(var(--accent-2) / 0.24) 52%,
     transparent 78%
   );
-  opacity: 0.35;
+  opacity: calc(0.35 * var(--texture-scanline-strength, 1));
 }
 
 .root[data-size="xs"] {
